--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,362 @@
 *.o
 *.xyz
+notebooks/Exercise 11/rot/frame_0.png
+notebooks/Exercise 11/rot/frame_1.png
+notebooks/Exercise 11/rot/frame_10.png
+notebooks/Exercise 11/rot/frame_100.png
+notebooks/Exercise 11/rot/frame_101.png
+notebooks/Exercise 11/rot/frame_102.png
+notebooks/Exercise 11/rot/frame_103.png
+notebooks/Exercise 11/rot/frame_104.png
+notebooks/Exercise 11/rot/frame_105.png
+notebooks/Exercise 11/rot/frame_106.png
+notebooks/Exercise 11/rot/frame_107.png
+notebooks/Exercise 11/rot/frame_108.png
+notebooks/Exercise 11/rot/frame_109.png
+notebooks/Exercise 11/rot/frame_11.png
+notebooks/Exercise 11/rot/frame_110.png
+notebooks/Exercise 11/rot/frame_111.png
+notebooks/Exercise 11/rot/frame_112.png
+notebooks/Exercise 11/rot/frame_113.png
+notebooks/Exercise 11/rot/frame_114.png
+notebooks/Exercise 11/rot/frame_115.png
+notebooks/Exercise 11/rot/frame_116.png
+notebooks/Exercise 11/rot/frame_117.png
+notebooks/Exercise 11/rot/frame_118.png
+notebooks/Exercise 11/rot/frame_119.png
+notebooks/Exercise 11/rot/frame_12.png
+notebooks/Exercise 11/rot/frame_120.png
+notebooks/Exercise 11/rot/frame_121.png
+notebooks/Exercise 11/rot/frame_122.png
+notebooks/Exercise 11/rot/frame_123.png
+notebooks/Exercise 11/rot/frame_124.png
+notebooks/Exercise 11/rot/frame_125.png
+notebooks/Exercise 11/rot/frame_126.png
+notebooks/Exercise 11/rot/frame_127.png
+notebooks/Exercise 11/rot/frame_128.png
+notebooks/Exercise 11/rot/frame_129.png
+notebooks/Exercise 11/rot/frame_13.png
+notebooks/Exercise 11/rot/frame_130.png
+notebooks/Exercise 11/rot/frame_131.png
+notebooks/Exercise 11/rot/frame_132.png
+notebooks/Exercise 11/rot/frame_133.png
+notebooks/Exercise 11/rot/frame_134.png
+notebooks/Exercise 11/rot/frame_135.png
+notebooks/Exercise 11/rot/frame_136.png
+notebooks/Exercise 11/rot/frame_137.png
+notebooks/Exercise 11/rot/frame_138.png
+notebooks/Exercise 11/rot/frame_139.png
+notebooks/Exercise 11/rot/frame_14.png
+notebooks/Exercise 11/rot/frame_140.png
+notebooks/Exercise 11/rot/frame_141.png
+notebooks/Exercise 11/rot/frame_142.png
+notebooks/Exercise 11/rot/frame_143.png
+notebooks/Exercise 11/rot/frame_144.png
+notebooks/Exercise 11/rot/frame_145.png
+notebooks/Exercise 11/rot/frame_146.png
+notebooks/Exercise 11/rot/frame_147.png
+notebooks/Exercise 11/rot/frame_148.png
+notebooks/Exercise 11/rot/frame_149.png
+notebooks/Exercise 11/rot/frame_15.png
+notebooks/Exercise 11/rot/frame_150.png
+notebooks/Exercise 11/rot/frame_151.png
+notebooks/Exercise 11/rot/frame_152.png
+notebooks/Exercise 11/rot/frame_153.png
+notebooks/Exercise 11/rot/frame_154.png
+notebooks/Exercise 11/rot/frame_155.png
+notebooks/Exercise 11/rot/frame_156.png
+notebooks/Exercise 11/rot/frame_157.png
+notebooks/Exercise 11/rot/frame_158.png
+notebooks/Exercise 11/rot/frame_159.png
+notebooks/Exercise 11/rot/frame_16.png
+notebooks/Exercise 11/rot/frame_160.png
+notebooks/Exercise 11/rot/frame_161.png
+notebooks/Exercise 11/rot/frame_162.png
+notebooks/Exercise 11/rot/frame_163.png
+notebooks/Exercise 11/rot/frame_164.png
+notebooks/Exercise 11/rot/frame_165.png
+notebooks/Exercise 11/rot/frame_166.png
+notebooks/Exercise 11/rot/frame_167.png
+notebooks/Exercise 11/rot/frame_168.png
+notebooks/Exercise 11/rot/frame_169.png
+notebooks/Exercise 11/rot/frame_17.png
+notebooks/Exercise 11/rot/frame_170.png
+notebooks/Exercise 11/rot/frame_171.png
+notebooks/Exercise 11/rot/frame_172.png
+notebooks/Exercise 11/rot/frame_173.png
+notebooks/Exercise 11/rot/frame_174.png
+notebooks/Exercise 11/rot/frame_175.png
+notebooks/Exercise 11/rot/frame_176.png
+notebooks/Exercise 11/rot/frame_177.png
+notebooks/Exercise 11/rot/frame_178.png
+notebooks/Exercise 11/rot/frame_179.png
+notebooks/Exercise 11/rot/frame_18.png
+notebooks/Exercise 11/rot/frame_180.png
+notebooks/Exercise 11/rot/frame_181.png
+notebooks/Exercise 11/rot/frame_182.png
+notebooks/Exercise 11/rot/frame_183.png
+notebooks/Exercise 11/rot/frame_184.png
+notebooks/Exercise 11/rot/frame_185.png
+notebooks/Exercise 11/rot/frame_186.png
+notebooks/Exercise 11/rot/frame_187.png
+notebooks/Exercise 11/rot/frame_188.png
+notebooks/Exercise 11/rot/frame_189.png
+notebooks/Exercise 11/rot/frame_19.png
+notebooks/Exercise 11/rot/frame_190.png
+notebooks/Exercise 11/rot/frame_191.png
+notebooks/Exercise 11/rot/frame_192.png
+notebooks/Exercise 11/rot/frame_193.png
+notebooks/Exercise 11/rot/frame_194.png
+notebooks/Exercise 11/rot/frame_195.png
+notebooks/Exercise 11/rot/frame_196.png
+notebooks/Exercise 11/rot/frame_197.png
+notebooks/Exercise 11/rot/frame_198.png
+notebooks/Exercise 11/rot/frame_199.png
+notebooks/Exercise 11/rot/frame_2.png
+notebooks/Exercise 11/rot/frame_20.png
+notebooks/Exercise 11/rot/frame_200.png
+notebooks/Exercise 11/rot/frame_201.png
+notebooks/Exercise 11/rot/frame_202.png
+notebooks/Exercise 11/rot/frame_203.png
+notebooks/Exercise 11/rot/frame_204.png
+notebooks/Exercise 11/rot/frame_205.png
+notebooks/Exercise 11/rot/frame_206.png
+notebooks/Exercise 11/rot/frame_207.png
+notebooks/Exercise 11/rot/frame_208.png
+notebooks/Exercise 11/rot/frame_209.png
+notebooks/Exercise 11/rot/frame_21.png
+notebooks/Exercise 11/rot/frame_210.png
+notebooks/Exercise 11/rot/frame_211.png
+notebooks/Exercise 11/rot/frame_212.png
+notebooks/Exercise 11/rot/frame_213.png
+notebooks/Exercise 11/rot/frame_214.png
+notebooks/Exercise 11/rot/frame_215.png
+notebooks/Exercise 11/rot/frame_216.png
+notebooks/Exercise 11/rot/frame_217.png
+notebooks/Exercise 11/rot/frame_218.png
+notebooks/Exercise 11/rot/frame_219.png
+notebooks/Exercise 11/rot/frame_22.png
+notebooks/Exercise 11/rot/frame_220.png
+notebooks/Exercise 11/rot/frame_221.png
+notebooks/Exercise 11/rot/frame_222.png
+notebooks/Exercise 11/rot/frame_223.png
+notebooks/Exercise 11/rot/frame_224.png
+notebooks/Exercise 11/rot/frame_225.png
+notebooks/Exercise 11/rot/frame_226.png
+notebooks/Exercise 11/rot/frame_227.png
+notebooks/Exercise 11/rot/frame_228.png
+notebooks/Exercise 11/rot/frame_229.png
+notebooks/Exercise 11/rot/frame_23.png
+notebooks/Exercise 11/rot/frame_230.png
+notebooks/Exercise 11/rot/frame_231.png
+notebooks/Exercise 11/rot/frame_232.png
+notebooks/Exercise 11/rot/frame_233.png
+notebooks/Exercise 11/rot/frame_234.png
+notebooks/Exercise 11/rot/frame_235.png
+notebooks/Exercise 11/rot/frame_236.png
+notebooks/Exercise 11/rot/frame_237.png
+notebooks/Exercise 11/rot/frame_238.png
+notebooks/Exercise 11/rot/frame_239.png
+notebooks/Exercise 11/rot/frame_24.png
+notebooks/Exercise 11/rot/frame_240.png
+notebooks/Exercise 11/rot/frame_241.png
+notebooks/Exercise 11/rot/frame_242.png
+notebooks/Exercise 11/rot/frame_243.png
+notebooks/Exercise 11/rot/frame_244.png
+notebooks/Exercise 11/rot/frame_245.png
+notebooks/Exercise 11/rot/frame_246.png
+notebooks/Exercise 11/rot/frame_247.png
+notebooks/Exercise 11/rot/frame_248.png
+notebooks/Exercise 11/rot/frame_249.png
+notebooks/Exercise 11/rot/frame_25.png
+notebooks/Exercise 11/rot/frame_250.png
+notebooks/Exercise 11/rot/frame_251.png
+notebooks/Exercise 11/rot/frame_252.png
+notebooks/Exercise 11/rot/frame_253.png
+notebooks/Exercise 11/rot/frame_254.png
+notebooks/Exercise 11/rot/frame_255.png
+notebooks/Exercise 11/rot/frame_256.png
+notebooks/Exercise 11/rot/frame_257.png
+notebooks/Exercise 11/rot/frame_258.png
+notebooks/Exercise 11/rot/frame_259.png
+notebooks/Exercise 11/rot/frame_26.png
+notebooks/Exercise 11/rot/frame_260.png
+notebooks/Exercise 11/rot/frame_261.png
+notebooks/Exercise 11/rot/frame_262.png
+notebooks/Exercise 11/rot/frame_263.png
+notebooks/Exercise 11/rot/frame_264.png
+notebooks/Exercise 11/rot/frame_265.png
+notebooks/Exercise 11/rot/frame_266.png
+notebooks/Exercise 11/rot/frame_267.png
+notebooks/Exercise 11/rot/frame_268.png
+notebooks/Exercise 11/rot/frame_269.png
+notebooks/Exercise 11/rot/frame_27.png
+notebooks/Exercise 11/rot/frame_270.png
+notebooks/Exercise 11/rot/frame_271.png
+notebooks/Exercise 11/rot/frame_272.png
+notebooks/Exercise 11/rot/frame_273.png
+notebooks/Exercise 11/rot/frame_274.png
+notebooks/Exercise 11/rot/frame_275.png
+notebooks/Exercise 11/rot/frame_276.png
+notebooks/Exercise 11/rot/frame_277.png
+notebooks/Exercise 11/rot/frame_278.png
+notebooks/Exercise 11/rot/frame_279.png
+notebooks/Exercise 11/rot/frame_28.png
+notebooks/Exercise 11/rot/frame_280.png
+notebooks/Exercise 11/rot/frame_281.png
+notebooks/Exercise 11/rot/frame_282.png
+notebooks/Exercise 11/rot/frame_283.png
+notebooks/Exercise 11/rot/frame_284.png
+notebooks/Exercise 11/rot/frame_285.png
+notebooks/Exercise 11/rot/frame_286.png
+notebooks/Exercise 11/rot/frame_287.png
+notebooks/Exercise 11/rot/frame_288.png
+notebooks/Exercise 11/rot/frame_289.png
+notebooks/Exercise 11/rot/frame_29.png
+notebooks/Exercise 11/rot/frame_290.png
+notebooks/Exercise 11/rot/frame_291.png
+notebooks/Exercise 11/rot/frame_292.png
+notebooks/Exercise 11/rot/frame_293.png
+notebooks/Exercise 11/rot/frame_294.png
+notebooks/Exercise 11/rot/frame_295.png
+notebooks/Exercise 11/rot/frame_296.png
+notebooks/Exercise 11/rot/frame_297.png
+notebooks/Exercise 11/rot/frame_298.png
+notebooks/Exercise 11/rot/frame_299.png
+notebooks/Exercise 11/rot/frame_3.png
+notebooks/Exercise 11/rot/frame_30.png
+notebooks/Exercise 11/rot/frame_300.png
+notebooks/Exercise 11/rot/frame_301.png
+notebooks/Exercise 11/rot/frame_302.png
+notebooks/Exercise 11/rot/frame_303.png
+notebooks/Exercise 11/rot/frame_304.png
+notebooks/Exercise 11/rot/frame_305.png
+notebooks/Exercise 11/rot/frame_306.png
+notebooks/Exercise 11/rot/frame_307.png
+notebooks/Exercise 11/rot/frame_308.png
+notebooks/Exercise 11/rot/frame_309.png
+notebooks/Exercise 11/rot/frame_31.png
+notebooks/Exercise 11/rot/frame_310.png
+notebooks/Exercise 11/rot/frame_311.png
+notebooks/Exercise 11/rot/frame_312.png
+notebooks/Exercise 11/rot/frame_313.png
+notebooks/Exercise 11/rot/frame_314.png
+notebooks/Exercise 11/rot/frame_315.png
+notebooks/Exercise 11/rot/frame_316.png
+notebooks/Exercise 11/rot/frame_317.png
+notebooks/Exercise 11/rot/frame_318.png
+notebooks/Exercise 11/rot/frame_319.png
+notebooks/Exercise 11/rot/frame_32.png
+notebooks/Exercise 11/rot/frame_320.png
+notebooks/Exercise 11/rot/frame_321.png
+notebooks/Exercise 11/rot/frame_322.png
+notebooks/Exercise 11/rot/frame_323.png
+notebooks/Exercise 11/rot/frame_324.png
+notebooks/Exercise 11/rot/frame_325.png
+notebooks/Exercise 11/rot/frame_326.png
+notebooks/Exercise 11/rot/frame_327.png
+notebooks/Exercise 11/rot/frame_328.png
+notebooks/Exercise 11/rot/frame_329.png
+notebooks/Exercise 11/rot/frame_33.png
+notebooks/Exercise 11/rot/frame_330.png
+notebooks/Exercise 11/rot/frame_331.png
+notebooks/Exercise 11/rot/frame_332.png
+notebooks/Exercise 11/rot/frame_333.png
+notebooks/Exercise 11/rot/frame_334.png
+notebooks/Exercise 11/rot/frame_335.png
+notebooks/Exercise 11/rot/frame_336.png
+notebooks/Exercise 11/rot/frame_337.png
+notebooks/Exercise 11/rot/frame_338.png
+notebooks/Exercise 11/rot/frame_339.png
+notebooks/Exercise 11/rot/frame_34.png
+notebooks/Exercise 11/rot/frame_340.png
+notebooks/Exercise 11/rot/frame_341.png
+notebooks/Exercise 11/rot/frame_342.png
+notebooks/Exercise 11/rot/frame_343.png
+notebooks/Exercise 11/rot/frame_344.png
+notebooks/Exercise 11/rot/frame_345.png
+notebooks/Exercise 11/rot/frame_346.png
+notebooks/Exercise 11/rot/frame_347.png
+notebooks/Exercise 11/rot/frame_348.png
+notebooks/Exercise 11/rot/frame_349.png
+notebooks/Exercise 11/rot/frame_35.png
+notebooks/Exercise 11/rot/frame_350.png
+notebooks/Exercise 11/rot/frame_351.png
+notebooks/Exercise 11/rot/frame_352.png
+notebooks/Exercise 11/rot/frame_353.png
+notebooks/Exercise 11/rot/frame_354.png
+notebooks/Exercise 11/rot/frame_355.png
+notebooks/Exercise 11/rot/frame_356.png
+notebooks/Exercise 11/rot/frame_357.png
+notebooks/Exercise 11/rot/frame_358.png
+notebooks/Exercise 11/rot/frame_359.png
+notebooks/Exercise 11/rot/frame_36.png
+notebooks/Exercise 11/rot/frame_37.png
+notebooks/Exercise 11/rot/frame_38.png
+notebooks/Exercise 11/rot/frame_39.png
+notebooks/Exercise 11/rot/frame_4.png
+notebooks/Exercise 11/rot/frame_40.png
+notebooks/Exercise 11/rot/frame_41.png
+notebooks/Exercise 11/rot/frame_42.png
+notebooks/Exercise 11/rot/frame_43.png
+notebooks/Exercise 11/rot/frame_44.png
+notebooks/Exercise 11/rot/frame_45.png
+notebooks/Exercise 11/rot/frame_46.png
+notebooks/Exercise 11/rot/frame_47.png
+notebooks/Exercise 11/rot/frame_48.png
+notebooks/Exercise 11/rot/frame_49.png
+notebooks/Exercise 11/rot/frame_5.png
+notebooks/Exercise 11/rot/frame_50.png
+notebooks/Exercise 11/rot/frame_51.png
+notebooks/Exercise 11/rot/frame_52.png
+notebooks/Exercise 11/rot/frame_53.png
+notebooks/Exercise 11/rot/frame_54.png
+notebooks/Exercise 11/rot/frame_55.png
+notebooks/Exercise 11/rot/frame_56.png
+notebooks/Exercise 11/rot/frame_57.png
+notebooks/Exercise 11/rot/frame_58.png
+notebooks/Exercise 11/rot/frame_59.png
+notebooks/Exercise 11/rot/frame_6.png
+notebooks/Exercise 11/rot/frame_60.png
+notebooks/Exercise 11/rot/frame_61.png
+notebooks/Exercise 11/rot/frame_62.png
+notebooks/Exercise 11/rot/frame_63.png
+notebooks/Exercise 11/rot/frame_64.png
+notebooks/Exercise 11/rot/frame_65.png
+notebooks/Exercise 11/rot/frame_66.png
+notebooks/Exercise 11/rot/frame_67.png
+notebooks/Exercise 11/rot/frame_68.png
+notebooks/Exercise 11/rot/frame_69.png
+notebooks/Exercise 11/rot/frame_7.png
+notebooks/Exercise 11/rot/frame_70.png
+notebooks/Exercise 11/rot/frame_71.png
+notebooks/Exercise 11/rot/frame_72.png
+notebooks/Exercise 11/rot/frame_73.png
+notebooks/Exercise 11/rot/frame_74.png
+notebooks/Exercise 11/rot/frame_75.png
+notebooks/Exercise 11/rot/frame_76.png
+notebooks/Exercise 11/rot/frame_77.png
+notebooks/Exercise 11/rot/frame_78.png
+notebooks/Exercise 11/rot/frame_79.png
+notebooks/Exercise 11/rot/frame_8.png
+notebooks/Exercise 11/rot/frame_80.png
+notebooks/Exercise 11/rot/frame_81.png
+notebooks/Exercise 11/rot/frame_82.png
+notebooks/Exercise 11/rot/frame_83.png
+notebooks/Exercise 11/rot/frame_84.png
+notebooks/Exercise 11/rot/frame_85.png
+notebooks/Exercise 11/rot/frame_86.png
+notebooks/Exercise 11/rot/frame_87.png
+notebooks/Exercise 11/rot/frame_88.png
+notebooks/Exercise 11/rot/frame_89.png
+notebooks/Exercise 11/rot/frame_9.png
+notebooks/Exercise 11/rot/frame_90.png
+notebooks/Exercise 11/rot/frame_91.png
+notebooks/Exercise 11/rot/frame_92.png
+notebooks/Exercise 11/rot/frame_93.png
+notebooks/Exercise 11/rot/frame_94.png
+notebooks/Exercise 11/rot/frame_95.png
+notebooks/Exercise 11/rot/frame_96.png
+notebooks/Exercise 11/rot/frame_97.png
+notebooks/Exercise 11/rot/frame_98.png
+notebooks/Exercise 11/rot/frame_99.png
