Fixed makefile compilation order

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -1,4 +1,4 @@
 all: 
-	gfortran autocorr.f90 mod_autocorr.f90 -o autocorr.x
+	gfortran  mod_autocorr.f90 autocorr.f90 -o autocorr.x
 clean:
 	rm *.mod *.o 
